@@ -1,5 +1,4 @@
 apport:
- - add_gdb_info(): Call gdb just once for speed optimization
 
 problem_report.py:
 
